Fix Customer Feedback Section with Videos

--- a/rpm.html
+++ b/rpm.html
@@ -375,6 +375,11 @@ body {
 	margin-bottom: 0 !important;
 }
 /* Make sure containers never lose their center alignment */
+      }
+      
+      /* Hide original testimonial cards */
+      .testimonial-card {
+        display: none !important;
 .container-medium,.container-small, .container-large {
 	margin-right: auto !important;
   margin-left: auto !important;
